--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                             <div class="cpn-text cpn-text-s1">
                                                 <!--<p class="lead animated fadeInUp" data-animate="fadeInUp" data-delay="1.45" style="visibility: visible; animation-delay: 1.45s;">SDAO Token, SDT</p> -->
                                                 <div class="cpn-text cpn-text-s1">
-                                                    <p class="lead tc-light animated fadeInUp" data-animate="fadeInUp" data-delay="1.45" style="visibility: visible; animation-delay: 1.45s;">DAO is a decentralized autonomous/anonymous organization.</p>
+                                                    <p class="lead tc-light animated fadeInUp" data-animate="fadeInUp" data-delay="1.45" style="visibility: visible; animation-delay: 1.45s;">DAO is a decentralized autonomous organization.</p>
                                                 </div>
                                               	 <div class="cpn-text cpn-text-s1">
                                                     <p class="lead tc-light animated fadeInUp" data-animate="fadeInUp" data-delay="1.45" style="visibility: visible; animation-delay: 1.45s;">Sustainable DAO Token (SDT) - Our token for managing SDAO and distribution treasury.</p>
@@ -241,7 +241,7 @@
                                                             </div>
                                                             <div class="btn-play-text">
                                                                 <span class="text-sm">Watch Video</span>
-                                                                <span class="text-xs">What and How it work</span>
+                                                                <span class="text-xs">What is it and how does it work</span>
                                                             </div>
                                                         </a>
                                                     </li>
