--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 </ul>
                                 <ul class="menu-btns animated fadeInDown" data-animate="fadeInDown" data-delay=".85" style="visibility: visible; animation-delay: 0.85s;">
 
-                                    <li><a href="https://anoya.io/swap" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span>Buy SDT</span></a></li>
+                                    <li><a href="https://anoya.io/swap?ref=63ac349f6c5c9b653a12b6d3&give=usdt&get=sdt&amount=1000" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span>Buy SDT</span></a></li>
                                 </ul>
                             </nav>
                             <div class="header-navbar-overlay"></div>
@@ -234,7 +234,7 @@
                                             <div class="cpn-btns">
                                                 <ul class="btn-grp animated fadeInUp" data-animate="fadeInUp" data-delay="1.55" style="visibility: visible; animation-delay: 1.55s;">
 
-                                                    <li><a href="https://anoya.io/swap" class="btn btn-md btn-grad btn-grad-alternet btn-round">BUY SDT</a></li>
+                                                    <li><a href="https://anoya.io/swap?ref=63ac349f6c5c9b653a12b6d3&give=usdt&get=sdt&amount=1000" class="btn btn-md btn-grad btn-grad-alternet btn-round">BUY SDT</a></li>
                                                     <li>
                                                         <a href="https://www.youtube.com/watch?v=tbO-tfZX3sc" class="video-popup btn-play-wrap animated fadeInUp" data-animate="fadeInUp" data-delay=".4" style="visibility: visible; animation-delay: 0.4s;">
                                                             <div class="btn-play btn-play-sm btn-play-s2">
