--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                             <li class="menu-item"><a class="menu-link nav-link" href="#faqs">Faqs</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item"><a class="menu-link nav-link" href="https://docs.google.com/presentation/d/e/2PACX-1vQe2O6sEU2TUPCVzdvCWZCMY2dquNJyB8MtBmT5VsAmVwCd038e5GLVNShU988QvO4bgRTw07MFx4Ux/pub?start=false&loop=false&delayms=3000#slide=id.p16">Patara Tsemi HPP</a></li>
+                                    <li class="menu-item"><a class="menu-link nav-link" href="https://docs.google.com/presentation/d/e/2PACX-1vTagSpGvgcEd3dw_5rO1reGRUCjPLSN24Zf-FGMO_bb2PXHoFuNFEo2g_TwyErtDwzZ3URhBGiSHJF5/pub?start=false&loop=false&delayms=3000">Tsemi-1 HPP</a></li>
                                     <li class="menu-item"><a class="menu-link nav-link" href="#contact">Contact</a></li>
                                 </ul>
                                 <ul class="menu-btns animated fadeInDown" data-animate="fadeInDown" data-delay=".85" style="visibility: visible; animation-delay: 0.85s;">
